Parser/src/TkomParser.java


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class TkomParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASS", "COMA", "COMMENT", "CURLY_LEFT_BRACKET", "CURLY_RIGHT_BRACKET", "DBL", "DO", "EQUALS_SIGN", "EXPONENT", "EXTENSION_IN", "EXTENSION_OUT", "HARRIS", "HOUGHC", "HOUGHL", "INT", "LOAD", "MINUS", "MOD", "NUM", "OPERATOR", "PROGRESS", "QUOTATION_MARK", "REL", "ROUND_LEFT_BRACKET", "ROUND_RIGHT_BRACKET", "SAVE", "VAR", "VARDEP", "WHILE", "WS", "'*'", "'+'", "'.'", "'/'", "'FALSE'", "'TRUE'", "'false'", "'true'"
    };

    public static final int EOF=-1;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int ASS=4;
    public static final int COMA=5;
    public static final int COMMENT=6;
    public static final int CURLY_LEFT_BRACKET=7;
    public static final int CURLY_RIGHT_BRACKET=8;
    public static final int DBL=9;
    public static final int DO=10;
    public static final int EQUALS_SIGN=11;
    public static final int EXPONENT=12;
    public static final int EXTENSION_IN=13;
    public static final int EXTENSION_OUT=14;
    public static final int HARRIS=15;
    public static final int HOUGHC=16;
    public static final int HOUGHL=17;
    public static final int INT=18;
    public static final int LOAD=19;
    public static final int MINUS=20;
    public static final int MOD=21;
    public static final int NUM=22;
    public static final int OPERATOR=23;
    public static final int PROGRESS=24;
    public static final int QUOTATION_MARK=25;
    public static final int REL=26;
    public static final int ROUND_LEFT_BRACKET=27;
    public static final int ROUND_RIGHT_BRACKET=28;
    public static final int SAVE=29;
    public static final int VAR=30;
    public static final int VARDEP=31;
    public static final int WHILE=32;
    public static final int WS=33;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TkomParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TkomParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return TkomParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g"; }



    // $ANTLR start "eval"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:3:1: eval returns [boolean v1] : (loadV= load |saveV= save |houghcV= houghc |houghlV= houghl |harrisV= harris | doWhileLoop |assV= ass |modV= mod | PROGRESS )+ ;
    public final boolean eval() throws RecognitionException {
        boolean v1 = false;


        String loadV =null;

        String saveV =null;

        TkomParser.houghc_return houghcV =null;

        TkomParser.houghl_return houghlV =null;

        TkomParser.harris_return harrisV =null;

        TkomParser.ass_return assV =null;

        TkomParser.mod_return modV =null;


        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:4:2: ( (loadV= load |saveV= save |houghcV= houghc |houghlV= houghl |harrisV= harris | doWhileLoop |assV= ass |modV= mod | PROGRESS )+ )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:4:4: (loadV= load |saveV= save |houghcV= houghc |houghlV= houghl |harrisV= harris | doWhileLoop |assV= ass |modV= mod | PROGRESS )+
            {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:4:4: (loadV= load |saveV= save |houghcV= houghc |houghlV= houghl |harrisV= harris | doWhileLoop |assV= ass |modV= mod | PROGRESS )+
            int cnt1=0;
            loop1:
            do {
                int alt1=10;
                switch ( input.LA(1) ) {
                case LOAD:
                    {
                    alt1=1;
                    }
                    break;
                case SAVE:
                    {
                    alt1=2;
                    }
                    break;
                case HOUGHC:
                    {
                    alt1=3;
                    }
                    break;
                case HOUGHL:
                    {
                    alt1=4;
                    }
                    break;
                case HARRIS:
                    {
                    alt1=5;
                    }
                    break;
                case DO:
                    {
                    alt1=6;
                    }
                    break;
                case VAR:
                    {
                    int LA1_8 = input.LA(2);

                    if ( (LA1_8==EQUALS_SIGN) ) {
                        alt1=7;
                    }
                    else if ( (LA1_8==OPERATOR) ) {
                        alt1=8;
                    }


                    }
                    break;
                case PROGRESS:
                    {
                    alt1=9;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:4:5: loadV= load
            	    {
            	    pushFollow(FOLLOW_load_in_eval20);
            	    loadV=load();

            	    state._fsp--;


            	    v1 = Dummies._load(loadV);

            	    }
            	    break;
            	case 2 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:5:4: saveV= save
            	    {
            	    pushFollow(FOLLOW_save_in_eval33);
            	    saveV=save();

            	    state._fsp--;


            	    v1 = Dummies._save(saveV);

            	    }
            	    break;
            	case 3 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:6:4: houghcV= houghc
            	    {
            	    pushFollow(FOLLOW_houghc_in_eval46);
            	    houghcV=houghc();

            	    state._fsp--;


            	    v1 = TkomSemantic._houghC((houghcV!=null?houghcV.v1:0.0), (houghcV!=null?houghcV.v2:0.0), (houghcV!=null?houghcV.v3:0.0), (houghcV!=null?houghcV.v4:0.0));

            	    }
            	    break;
            	case 4 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:7:4: houghlV= houghl
            	    {
            	    pushFollow(FOLLOW_houghl_in_eval58);
            	    houghlV=houghl();

            	    state._fsp--;


            	    v1 = TkomSemantic._houghL((houghlV!=null?houghlV.v1:0.0), (houghlV!=null?houghlV.v2:0.0), (houghlV!=null?houghlV.v3:0.0), (houghlV!=null?houghlV.v4:0.0), (houghlV!=null?houghlV.v5:0.0), (houghlV!=null?houghlV.v6:0.0), (houghlV!=null?houghlV.v7:0.0));

            	    }
            	    break;
            	case 5 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:8:4: harrisV= harris
            	    {
            	    pushFollow(FOLLOW_harris_in_eval70);
            	    harrisV=harris();

            	    state._fsp--;


            	    v1 = TkomSemantic._harris((harrisV!=null?harrisV.v1:0.0), (harrisV!=null?harrisV.v2:0.0), (harrisV!=null?harrisV.v3:0.0), (harrisV!=null?harrisV.v4:0.0), (harrisV!=null?harrisV.v5:false), (harrisV!=null?harrisV.v6:0.0));

            	    }
            	    break;
            	case 6 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:9:4: doWhileLoop
            	    {
            	    pushFollow(FOLLOW_doWhileLoop_in_eval77);
            	    doWhileLoop();

            	    state._fsp--;


            	    }
            	    break;
            	case 7 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:10:4: assV= ass
            	    {
            	    pushFollow(FOLLOW_ass_in_eval88);
            	    assV=ass();

            	    state._fsp--;


            	    v1 = Dummies._ass((assV!=null?assV.v1:null), (assV!=null?assV.v2:0.0));

            	    }
            	    break;
            	case 8 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:11:4: modV= mod
            	    {
            	    pushFollow(FOLLOW_mod_in_eval101);
            	    modV=mod();

            	    state._fsp--;


            	    v1 = Dummies._mod((modV!=null?modV.v1:null), (modV!=null?modV.v2:null), (modV!=null?modV.v3:0.0));

            	    }
            	    break;
            	case 9 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:12:4: PROGRESS
            	    {
            	    match(input,PROGRESS,FOLLOW_PROGRESS_in_eval110); 

            	    v1 = Dummies._progress();

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return v1;
    }
    // $ANTLR end "eval"



    // $ANTLR start "load"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:16:1: load returns [String str] : LOAD ROUND_LEFT_BRACKET QUOTATION_MARK a1= path a2= EXTENSION_IN QUOTATION_MARK ROUND_RIGHT_BRACKET ;
    public final String load() throws RecognitionException {
        String str = null;


        Token a2=null;
        String a1 =null;


        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:17:2: ( LOAD ROUND_LEFT_BRACKET QUOTATION_MARK a1= path a2= EXTENSION_IN QUOTATION_MARK ROUND_RIGHT_BRACKET )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:17:4: LOAD ROUND_LEFT_BRACKET QUOTATION_MARK a1= path a2= EXTENSION_IN QUOTATION_MARK ROUND_RIGHT_BRACKET
            {
            match(input,LOAD,FOLLOW_LOAD_in_load136); 

            match(input,ROUND_LEFT_BRACKET,FOLLOW_ROUND_LEFT_BRACKET_in_load140); 

            match(input,QUOTATION_MARK,FOLLOW_QUOTATION_MARK_in_load144); 

            pushFollow(FOLLOW_path_in_load152);
            a1=path();

            state._fsp--;


            str = a1;

            a2=(Token)match(input,EXTENSION_IN,FOLLOW_EXTENSION_IN_in_load162); 

            str += "." + (a2!=null?a2.getText():null);

            match(input,QUOTATION_MARK,FOLLOW_QUOTATION_MARK_in_load168); 

            match(input,ROUND_RIGHT_BRACKET,FOLLOW_ROUND_RIGHT_BRACKET_in_load172); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return str;
    }
    // $ANTLR end "load"



    // $ANTLR start "save"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:25:1: save returns [String str] : SAVE ROUND_LEFT_BRACKET QUOTATION_MARK a1= path a2= EXTENSION_OUT QUOTATION_MARK ROUND_RIGHT_BRACKET ;
    public final String save() throws RecognitionException {
        String str = null;


        Token a2=null;
        String a1 =null;


        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:26:2: ( SAVE ROUND_LEFT_BRACKET QUOTATION_MARK a1= path a2= EXTENSION_OUT QUOTATION_MARK ROUND_RIGHT_BRACKET )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:26:5: SAVE ROUND_LEFT_BRACKET QUOTATION_MARK a1= path a2= EXTENSION_OUT QUOTATION_MARK ROUND_RIGHT_BRACKET
            {
            match(input,SAVE,FOLLOW_SAVE_in_save188); 

            match(input,ROUND_LEFT_BRACKET,FOLLOW_ROUND_LEFT_BRACKET_in_save192); 

            match(input,QUOTATION_MARK,FOLLOW_QUOTATION_MARK_in_save196); 

            pushFollow(FOLLOW_path_in_save204);
            a1=path();

            state._fsp--;


            str = a1;

            a2=(Token)match(input,EXTENSION_OUT,FOLLOW_EXTENSION_OUT_in_save214); 

            str += "."+(a2!=null?a2.getText():null);

            match(input,QUOTATION_MARK,FOLLOW_QUOTATION_MARK_in_save219); 

            match(input,ROUND_RIGHT_BRACKET,FOLLOW_ROUND_RIGHT_BRACKET_in_save223); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return str;
    }
    // $ANTLR end "save"



    // $ANTLR start "path"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:34:1: path returns [String v1] : (a1= pathPart )+ ( '+' a2= VAR '+' )? '.' ;
    public final String path() throws RecognitionException {
        String v1 = null;


        Token a2=null;
        String a1 =null;


        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:35:2: ( (a1= pathPart )+ ( '+' a2= VAR '+' )? '.' )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:35:4: (a1= pathPart )+ ( '+' a2= VAR '+' )? '.'
            {
            v1 ="";

            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:36:3: (a1= pathPart )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==37) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:36:4: a1= pathPart
            	    {
            	    pushFollow(FOLLOW_pathPart_in_path248);
            	    a1=pathPart();

            	    state._fsp--;


            	    v1 += a1;

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:37:3: ( '+' a2= VAR '+' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==35) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:38:3: '+' a2= VAR '+'
                    {
                    match(input,35,FOLLOW_35_in_path260); 

                    a2=(Token)match(input,VAR,FOLLOW_VAR_in_path268); 

                    v1 += String.valueOf(TkomSemantic._get((a2!=null?a2.getText():null)));

                    match(input,35,FOLLOW_35_in_path275); 

                    }
                    break;

            }


            match(input,36,FOLLOW_36_in_path284); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return v1;
    }
    // $ANTLR end "path"



    // $ANTLR start "pathPart"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:45:1: fragment pathPart returns [String v1] : '/' (a1= ( VAR | INT ) )+ ;
    public final String pathPart() throws RecognitionException {
        String v1 = null;


        Token a1=null;

        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:46:2: ( '/' (a1= ( VAR | INT ) )+ )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:46:4: '/' (a1= ( VAR | INT ) )+
            {
            match(input,37,FOLLOW_37_in_pathPart300); 

            v1 = "/";

            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:47:7: (a1= ( VAR | INT ) )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==INT||LA4_0==VAR) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:47:7: a1= ( VAR | INT )
            	    {
            	    a1=(Token)input.LT(1);

            	    if ( input.LA(1)==INT||input.LA(1)==VAR ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            v1 += (a1!=null?a1.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return v1;
    }
    // $ANTLR end "pathPart"


    public static class houghc_return extends ParserRuleReturnScope {
        public double v1;
        public double v2;
        public double v3;
        public double v4;
    };


    // $ANTLR start "houghc"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:50:1: houghc returns [double v1, double v2, double v3, double v4] : HOUGHC ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp ROUND_RIGHT_BRACKET ;
    public final TkomParser.houghc_return houghc() throws RecognitionException {
        TkomParser.houghc_return retval = new TkomParser.houghc_return();
        retval.start = input.LT(1);


        double a1 =0.0;

        double a2 =0.0;

        double a3 =0.0;

        double a4 =0.0;


        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:51:2: ( HOUGHC ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp ROUND_RIGHT_BRACKET )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:51:4: HOUGHC ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp ROUND_RIGHT_BRACKET
            {
            match(input,HOUGHC,FOLLOW_HOUGHC_in_houghc341); 

            match(input,ROUND_LEFT_BRACKET,FOLLOW_ROUND_LEFT_BRACKET_in_houghc345); 

            pushFollow(FOLLOW_additionExp_in_houghc353);
            a1=additionExp();

            state._fsp--;


            retval.v1 = a1;

            match(input,COMA,FOLLOW_COMA_in_houghc359); 

            pushFollow(FOLLOW_additionExp_in_houghc367);
            a2=additionExp();

            state._fsp--;


            retval.v2 = a2;

            match(input,COMA,FOLLOW_COMA_in_houghc373); 

            pushFollow(FOLLOW_additionExp_in_houghc381);
            a3=additionExp();

            state._fsp--;


            retval.v3 = a3;

            match(input,COMA,FOLLOW_COMA_in_houghc387); 

            pushFollow(FOLLOW_additionExp_in_houghc395);
            a4=additionExp();

            state._fsp--;


            retval.v4 = a4;

            match(input,ROUND_RIGHT_BRACKET,FOLLOW_ROUND_RIGHT_BRACKET_in_houghc401); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "houghc"


    public static class houghl_return extends ParserRuleReturnScope {
        public double v1;
        public double v2;
        public double v3;
        public double v4;
        public double v5;
        public double v6;
        public double v7;
    };


    // $ANTLR start "houghl"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:63:1: houghl returns [double v1, double v2, double v3, double v4, double v5, double v6, double v7] : HOUGHL ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp COMA a5= additionExp COMA a6= additionExp COMA a7= additionExp ROUND_RIGHT_BRACKET ;
    public final TkomParser.houghl_return houghl() throws RecognitionException {
        TkomParser.houghl_return retval = new TkomParser.houghl_return();
        retval.start = input.LT(1);


        double a1 =0.0;

        double a2 =0.0;

        double a3 =0.0;

        double a4 =0.0;

        double a5 =0.0;

        double a6 =0.0;

        double a7 =0.0;


        try {
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:64:2: ( HOUGHL ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp COMA a5= additionExp COMA a6= additionExp COMA a7= additionExp ROUND_RIGHT_BRACKET )
            // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:64:4: HOUGHL ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp COMA a5= additionExp COMA a6= additionExp COMA a7= additionExp ROUND_RIGHT_BRACKET
            {
            match(input,HOUGHL,FOLLOW_HOUGHL_in_houghl419); 

            match(input,ROUND_LEFT_BRACKET,FOLLOW_ROUND_LEFT_BRACKET_in_houghl423); 

            pushFollow(FOLLOW_additionExp_in_houghl431);
            a1=additionExp();

            state._fsp--;


            retval.v1 = a1;

            match(input,COMA,FOLLOW_COMA_in_houghl437); 

            pushFollow(FOLLOW_additionExp_in_houghl445);
            a2=additionExp();

            state._fsp--;


            retval.v2 = a2;

            match(input,COMA,FOLLOW_COMA_in_houghl451); 

            pushFollow(FOLLOW_additionExp_in_houghl459);
            a3=additionExp();

            state._fsp--;


            retval.v3 = a3;

            match(input,COMA,FOLLOW_COMA_in_houghl465); 

            pushFollow(FOLLOW_additionExp_in_houghl473);
            a4=additionExp();

            state._fsp--;


            retval.v4 = a4;

            match(input,COMA,FOLLOW_COMA_in_houghl479); 

            pushFollow(FOLLOW_additionExp_in_houghl487);
            a5=additionExp();

            state._fsp--;


            retval.v5 = a5;

            match(input,COMA,FOLLOW_COMA_in_houghl493); 

            pushFollow(FOLLOW_additionExp_in_houghl501);
            a6=additionExp();

            state._fsp--;


            retval.v6 = a6;

            match(input,COMA,FOLLOW_COMA_in_houghl507); 

            pushFollow(FOLLOW_additionExp_in_houghl515);
            a7=additionExp();

            state._fsp--;


            retval.v7 = a7;

            match(input,ROUND_RIGHT_BRACKET,FOLLOW_ROUND_RIGHT_BRACKET_in_houghl522); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "houghl"


    public static class harris_return extends ParserRuleReturnScope {
        public double v1;
        public double v2;
        public double v3;
        public double v4;
        public boolean v5;
        public double v6;
    };


    // $ANTLR start "harris"
    // C:\\Documents and Settings\\samsung\\Pulpit\\TKOM\\Tkom.g:82:1: harris returns [double v1, double v2, double v3, double v4, boolean v5, double v6] : HARRIS ROUND_LEFT_BRACKET a1= additionExp COMA a2= additionExp COMA a3= additionExp COMA a4= additionExp COMA a5= logic_val COMA a6= additionExp ROUND_RIGHT_BRACKET ;
    public final TkomParser.harris_return harris() throws RecognitionException {
        TkomParser.harris_return retval = new TkomParser.harris_return();
        retval.start = input.LT(1);


        double a1 =0.0;

        double a2 =0.0;

        double a3 =0.0;

        double a4 =0.0;

        boolean a5 =false;

        double a6 =0.0;

